<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/FinalGradeCalculator"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:stretchColumns="*"
tools:context=".FinalGradeCalculator">


    <!-- Toolbar with back button -->
    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>


    <!-- Scroll view for the activities content -->
    <android.support.v4.widget.NestedScrollView android:layout_height="675dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <!-- Name Header -->
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/headerName"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold" />


                <!-- Weight Header -->
                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/headerWeight"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold" />


                <!-- Mark Header -->
                <TextView
                    android:id="@+id/tvMark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/headerMark"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold" />


                <!-- Results Header -->
                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/headerFinal"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold" />
            </TableRow>


            <TableRow style="@style/GradeCalculatorRowStyle">


                <EditText
                    android:id="@+id/etInputNameRow1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textPersonName"
                    android:text="@string/InputName"
                    android:textAlignment="viewStart"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/etInputGradeRow1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="numberSigned"
                    android:text="@string/InputGrade"
                    android:textAlignment="center" />


                <EditText
                    android:id="@+id/etInputWeightRow1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="numberSigned"
                    android:text="@string/inputWeight"
                    android:textAlignment="center" />


                <TextView
                    android:id="@+id/tvFinalResultRow1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/finalResult"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>


            <TableRow
                style="@style/GradeCalculatorRowStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvCourseName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/CourseName"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/evCourseName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:importantForAutofill="noExcludeDescendants"
                    android:textAlignment="viewStart"
                    android:textStyle="bold" />
            </TableRow>
            //

            <TableRow style="@style/GradeCalculatorRowStyle" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tvSemester"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Semester"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Year"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow style="@style/GradeCalculatorRowStyle">

                <Spinner
                    android:id="@+id/spinnerSemester"
                    style="@android:style/Widget.Holo.Light.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinnerYear"
                    style="@android:style/Widget.Holo.Light.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>


            <TableRow style="@style/GradeCalculatorRowStyle">


            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp">


                <!-- Calculate Final Mark Button -->
                <Button
                    android:id="@+id/btnCalculate"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="onClickCalculate"
                    android:text="@string/calculateButton" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tvRules"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rules"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </android.support.v4.widget.NestedScrollView>
</TableLayout>